# ThermoControl

./: .gitmodules  Thermo.kicad_pcb  Thermo.lib  Thermo.pro
board/brain_board/: _autosave-brain_board.kicad_pcb  _autosave-brain_board.kicad_sch  brain_board.kicad_pcb  brain_board.kicad_prl  brain_board.kicad_pro  brain_board.kicad_sch  brain_board.xml
board/k_element_sensors/: Thermo.kicad_prl  Thermo.kicad_pro  Thermo.kicad_sch  Thermo.sch  max31855.kicad_sch  max31855.sch
board/k_element_sensors/Thermo.pretty/: MountingHole_pattern.kicad_mod
board/phase_angle_control/hysteresis_controller/: hysteresis_controller.kicad_prl  hysteresis_controller.kicad_pro  hysteresis_controller.kicad_sch
board/phase_angle_control/phase_angle_control/: fp-lib-table  phase_angle_control.kicad_pcb  phase_angle_control.kicad_prl  phase_angle_control.kicad_pro  phase_angle_control.kicad_sch  phase_angle_control.kicad_sym  sym-lib-table
board/phase_angle_control/phase_angle_control/lcsc/: CAPC1608X90.kicad_mod  CC0603JRNPO9BN103.lib  MAX31855KASA_T.lib  SOIC127P600X175-8N.kicad_mod  SOP65P640X120-20N.kicad_mod  XDCR_ACS772LCB-100U-PFF-T.kicad_mod
board/phase_angle_control/phase_angle_control/pac.pretty/: 0603.kicad_mod  Fuse_2410.kicad_mod  KF206B-7.5-2P.kicad_mod  KF206B-7.5-3P.kicad_mod  KF206B-7.5-5P.kicad_mod  KF206B-7.5.kicad_mod  MountingHolesPE.kicad_mod  TAD3-0303-WEDI.kicad_mod  Transformer_NF_ETAL_P3324.kicad_mod  Transformer_ZMPT107-1.kicad_mod  con_277-17525-ND.kicad_mod  con_A123829-NDтАО.kicad_mod  con_EB167A-02-H.kicad_mod  micro_sd_slot.kicad_mod  res_2616.kicad_mod
software/: CMakeLists.txt  TODO.txt
software/arduino/: sketch_jul15a.ino
software/arduino/sketch_jul15a/: sketch_jul15a.ino
software/gui/: composed.html  index.html  script.js  style.css
software/hal/: .mxproject  Makefile  hal.ioc
software/hal/Core/Inc/: main.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h  syscalls.h
software/hal/Core/Src/: main.c  stm32g0xx_hal_msp.c  stm32g0xx_it.c  syscalls.c  user_main.c
software/src/: ___spi_comm.c  index.h  index.html  main.cc  system.h  thermo-k.ino
software/src/spi/: bus.h  transaction.h
software/src/thermo/: channel.h  control.h  filter.h  output.h  sensor.h  spi_io.h  tagged_type.h  types.h
software/src/web/: json_stream.h  server.h
software/test/: sensor.cc  spi_bus.cc
